# pep8speaks

./: .dockerignore  .env.sample  .gitignore  .pep8speaks.yml  .travis.yml  AUTHORS  DEPLOYMENT-GUIDE.md  Dockerfile  LICENSE  Pipfile  README.md  app.json  app.py  conftest.py  docker-compose.yml  file_to_check.py  pyproject.toml  requirements.txt  server.py  setup.cfg
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  auto-comment.yml  policy.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: recent-activity.yml  release.yml  test.yml  update.yml
data/: default_config.json  default_pep8speaks.yml
pep8speaks/: constants.py  handlers.py  helpers.py  models.py  utils.py
requirements/: base.txt  test.txt
templates/: index.html
tests/: test_app.py  test_workflow.py
tests/local/: test_server.py
tests/local/pep8speaks/: test_utils.py
tests/pep8speaks/: test_utils.py  test_workflow.py
usage_data/: README.txt
