[tool.poetry]
name = "pep8speaks"
version = "1.8"
description = "A GitHub :octocat: app to automatically review Python code style over Pull Requests"
authors = ["Himanshu Mishra <himanshu@orkohunter.net>"]
maintainers = ["Tushar Gupta <tushar.gupta5526@gmail.com>", "Kanishk Pachauri <itskanishkp.py@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.3.3"
requests = "^2.31.0"
gunicorn = "^21.2.0"
pycodestyle = "^2.11.0"
flake8 = "^6.1.0"
PyYAML = "^6.0.1"
unidiff = "^0.7.5"
autopep8 = "^2.0.4"
Markdown = "^3.4.4"
beautifulsoup4 = "^4.12.2"
MarkupSafe = "^2.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
