[project]
name = "pep8speaks"
version = "1.9"
requires-python = ">=3.8.1"
dependencies = [
    "autopep8~=2.0.4",
    "beautifulsoup4~=4.12.2",
    "flake8~=6.1.0",
    "flask~=3.0.0",
    "gunicorn~=21.2.0",
    "markdown~=3.5.1",
    "markupsafe~=2.1.3",
    "pycodestyle~=2.11.1",
    "python-dotenv~=1.0.0",
    "pyyaml~=6.0.1",
    "requests~=2.31.0",
    "unidiff~=0.7.5",
]

[dependency-groups]
dev = [
    "autopep8~=2.0.4",
    "beautifulsoup4~=4.12.2",
    "flake8~=6.1.0",
    "flask~=3.0.0",
    "gunicorn~=21.2.0",
    "markdown~=3.5.1",
    "markupsafe~=2.1.3",
    "mock~=5.1.0",
    "pycodestyle~=2.11.1",
    "pytest~=7.4.3",
    "pytest-flask~=1.3.0",
    "pytest-mock~=3.12.0",
    "python-dotenv~=1.0.0",
    "pyyaml~=6.0.1",
    "requests~=2.31.0",
    "unidiff~=0.7.5",
]
